--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,12 +9,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build & Push Image
+    - name: Build
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "dab8106" --password-stdin
         docker image build -t dab8106/pyflask:latest .
-        docker push dab8106/pyflask:latest
